--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
       --border-color: #01497c;
       --header-bg: linear-gradient(135deg, #001f3f, #013a63);
     }
-
     /* =============================
        🌟 الهيدر + بخار الكوب
     ============================== */
@@ -263,6 +262,10 @@
   </style>
 </head>
 <body data-theme="space" class="space-theme">
+  <!-- 🗺️ الخريطة الآن أول الصفحة -->
+  <section class="map-container">
+    <div id="map"></div>
+  </section>
 
   <!-- 🌌 الهيدر -->
   <header>
@@ -300,10 +303,7 @@
     </div>
   </section>
 
-  <!-- 🗺️ الخريطة -->
-  <section class="map-container">
-    <div id="map"></div>
-  </section>
+
   <!-- ☕ نتائج المقاهي -->
   <section class="results-section container">
     <div class="results-header d-flex justify-content-between align-items-center mb-4 p-3"
