9 Update index.html

--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
   </style>
 </head>
 <body data-theme="space" class="space-theme">
+  <!-- 🗺️ الخريطة -->
+  <section class="map-container">
+    <div id="map"></div>
+  </section>
 
   <!-- 🌌 الهيدر -->
   <header>
